--- a/demoapp/demoapp/charts/ingress/templates/ingress.yaml
+++ b/demoapp/demoapp/charts/ingress/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: "demoapp.prod.devops.tentech.projects.apex-consulting.io"
+    - host: "demoapp.prod.tt-project.redkyo017.click"
       http:
         paths:
           - path: /api
