--- a/demoapp/charts/ui/templates/deployment.yaml
+++ b/demoapp/charts/ui/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
                 name: ui
           securityContext:
             {}
-          image: "841483048185.dkr.ecr.us-east-1.amazonaws.com/prod/ui:5d5d7a85"
+          image: "841483048185.dkr.ecr.us-east-1.amazonaws.com/prod/ui:fakeContainerImage"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
