--- a/demoapp/demoapp/charts/api/templates/deployment.yaml
+++ b/demoapp/demoapp/charts/api/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
                 name: api
           securityContext:
             {}
-          image: "884185907314.dkr.ecr.us-east-2.amazonaws.com/prod/api:93d5026f"
+          image: "884185907314.dkr.ecr.us-east-2.amazonaws.com/prod/api:fakeContainerImage"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
