Update from https://github.com/redkyo017/tt-project-ci/commit/232a4280b01165eae8edb801395c9580c324f2a3

--- a/demoapp/demoapp/charts/api/templates/deployment.yaml
+++ b/demoapp/demoapp/charts/api/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
                 name: api
           securityContext:
             {}
-          image: "884185907314.dkr.ecr.us-east-2.amazonaws.com/prod/api:fakeContainerImage"
+          image: "884185907314.dkr.ecr.us-east-2.amazonaws.com/prod/api:232a4280"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
